feat: get filtered orders by shipping date, remove logs
